Start camera again when clicking on More button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button id="snap">📸 Snap</button>
             </div>
 
-            <canvas id="canvas" style="display: none;"></canvas>
+            <canvas id="canvas"></canvas>
             <div id="qrcode"></div>
         </main>
     </div>
