--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts/variables.js"></script>
     <script src="scripts/camera.js"></script>
+    <script src="scripts/snap.js"></script>
+    <script src="scripts/preview.js"></script>
+    <script src="scripts/edit.js"></script>
     <script src="scripts/export.js"></script>
     <script src="scripts/main.js"></script>
 </body>
