Add some animations upon clicking the 'Start Photobooth' button

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <button class="frameButton" data-frame="none">None</button>
             <button class="frameButton" data-frame="purple">Purple</button>
 
-            <h3>Stickers</h3>
+            <!-- <h3>Stickers</h3>
             <button onclick="addSticker('🎉')">🎉</button>
             <button onclick="addSticker('🌟')">🌟</button>
-            <button onclick="addSticker('❤️')">❤️</button>
+            <button onclick="addSticker('❤️')">❤️</button> -->
 
             <div style="margin-top: 1em;">
                 <button id="more" onclick="restartPhotobooth()">✨ More?</button>
