Add animations on loading the booth and edit screen

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <button onclick="addSticker('❤️')">❤️</button> -->
 
             <div style="margin-top: 1em;">
-                <button id="more" onclick="restartPhotobooth()">✨ More?</button>
+                <button id="more" onclick="await restartPhotobooth()">✨ More?</button>
                 <button id="download">⬇️ Download</button>
                 <button id="share">🔗 Share</button>
                 <!-- <button id="qr">📱 QR Code</button> -->
